<resources>
    <string name="app_name">Recipes</string>
    <string name="recipe_card_date_format">MMMM yyyy</string>
    <string name="tab_recipe_category">Categories</string>
    <string name="tab_recipe_grid">Grid</string>
    <string name="tab_recipe_label">Labels</string>
    <string name="tab_recipe_bookmark">Bookmarks</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_recipes">Recipes</string>
    <string name="navigation_cart">Cart</string>
    <string name="drawer_account_image_description">Your account\'s image</string>
    <string name="drawer_account_details_description">Account details</string>
    <string name="drawer_account_add">Add an account</string>
    <string name="drawer_date_top_description">Creation changedAt</string>
    <string name="drawer_date_end_description">Change changedAt</string>
    <string name="drawer_recipe_num_description">Recipes</string>
    <string name="drawer_menu_foods">Ingredients</string>
    <string name="drawer_menu_cart">Cart</string>
    <string name="drawer_menu_labels">Labels</string>
    <string name="drawer_menu_categories">Categories</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_search_clear">Clear search</string>
    <string name="action_clear">Clear</string>
    <string name="action_reset">Reset to default</string>
    <string name="action_spinner">Choose</string>
    <string name="action_overflow">More</string>
    <string name="list_group">Group by</string>
    <string name="recipe_group_category">Categories</string>
    <string name="recipe_group_label">Labels</string>
    <string name="recipe_group_bookmark">Bookmarks</string>
    <string name="recipe_group_list">List</string>
    <string name="list_group_energy">Energy</string>
    <string name="list_group_nutrition">Nutrition</string>
    <string name="list_group_time">Time</string>
    <string name="recipe_group_food">Ingredient</string>
    <string name="list_sort">Sort by</string>
    <string name="list_sort_name">Name</string>
    <string name="list_sort_account">Account</string>
    <string name="list_sort_date_top">Creation changedAt</string>
    <string name="list_sort_date_end">Change changedAt</string>
    <string name="list_sort_rating">Rating</string>
    <string name="list_filter">Filter</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_add_to_cart">Add to cart</string>
    <string name="action_add_to_bookmark">Add to bookmark</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <plurals name="quantity_serving">
        <item quantity="zero">%d serving</item>
        <item quantity="one">%d serving</item>
        <item quantity="two">%d servings</item>
        <item quantity="few">%d servings</item>
        <item quantity="many">%d servings</item>
        <item quantity="other">%d servings</item>
    </plurals>
    <plurals name="quantity_weight_gram">
        <item quantity="zero">%d gram</item>
        <item quantity="one">%d gram</item>
        <item quantity="two">%d grams</item>
        <item quantity="few">%d grams</item>
        <item quantity="many">%d grams</item>
        <item quantity="other">%d grams</item>
    </plurals>
    <string name="nutrition_title">Nutrition value</string>
    <string name="nutrition_quantity_switch">Per %s</string>
    <string name="nutrition_carbohydrate">Carbohydrate</string>
    <string name="nutrition_protein">Protein</string>
    <string name="nutrition_fat">Fat</string>
    <string name="nutrition_energy_value">%d\nkCal</string>
    <string name="percent">%d%%</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="drawer_base_nav_recipe_all">All recipes</string>
    <string name="drawer_base_nav_recipe_favorite">Favorite recipes</string>
    <string name="startup_entity_recipe">
        [
            {\"id\":0,\"uuid\":\"34d74aa8-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 0\",\"categoryId\":0},
            {\"id\":1,\"uuid\":\"34d74d46-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 1\",\"categoryId\":1},
            {\"id\":2,\"uuid\":\"34d74e86-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 2\",\"categoryId\":2},
            {\"id\":3,\"uuid\":\"34d75020-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 3\",\"categoryId\":3},
            {\"id\":4,\"uuid\":\"34d7519c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 4\",\"categoryId\":4},
            {\"id\":5,\"uuid\":\"34d757a0-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 5\",\"categoryId\":5},
            {\"id\":6,\"uuid\":\"34d7593a-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 6\",\"categoryId\":6},
            {\"id\":7,\"uuid\":\"34d75e58-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 7\",\"categoryId\":7},
            {\"id\":8,\"uuid\":\"34d7602e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 8\",\"categoryId\":8},
            {\"id\":9,\"uuid\":\"34d761b4-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 9\",\"categoryId\":9},
            {\"id\":10,\"uuid\":\"34d7634e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 10\",\"categoryId\":0},
            {\"id\":11,\"uuid\":\"34d764b6-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 11\",\"categoryId\":1},
            {\"id\":12,\"uuid\":\"34d7661e-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 12\",\"categoryId\":2},
            {\"id\":13,\"uuid\":\"34d767ae-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 13\",\"categoryId\":3},
            {\"id\":14,\"uuid\":\"34d76c54-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 14\",\"categoryId\":4},
            {\"id\":15,\"uuid\":\"34d76d44-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 15\",\"categoryId\":5},
            {\"id\":16,\"uuid\":\"34d76e48-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 16\",\"categoryId\":6},
            {\"id\":17,\"uuid\":\"df99f06c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 17\",\"categoryId\":7},
            {\"id\":18,\"uuid\":\"df99f30a-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 18\",\"categoryId\":8},
            {\"id\":19,\"uuid\":\"df99f42c-3d5d-11e7-a919-92ebcb67fe33\",\"name\":\"Recipe # 19\",\"categoryId\":9}
        ]
    </string>
</resources>