<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/group"
        android:icon="@drawable/ic_list_group"
        android:title="@string/list_group"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/group_menu">
                <item
                    android:id="@+id/group_all"
                    android:icon="@drawable/ic_clear"
                    android:title="@string/recipe_group_list" />
                <item
                    android:id="@+id/group_label"
                    android:icon="@drawable/ic_label"
                    android:title="@string/recipe_group_label" />
                <item
                    android:id="@+id/group_category"
                    android:icon="@drawable/ic_category"
                    android:title="@string/recipe_group_category" />
                <item
                    android:id="@+id/group_food"
                    android:icon="@drawable/ic_food"
                    android:title="@string/recipe_group_food" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_list_sort"
        android:title="@string/list_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/sort_menu">
                <item
                    android:id="@+id/sort_clear"
                    android:icon="@drawable/ic_cancel"
                    android:title="@string/action_clear" />
                <item
                    android:id="@+id/sort_name"
                    android:icon="@drawable/ic_list_sort_name"
                    android:title="@string/list_sort_name" />
                <item
                    android:id="@+id/sort_account"
                    android:icon="@drawable/ic_list_sort_account"
                    android:title="@string/list_sort_account" />
                <item
                    android:id="@+id/sort_date_top"
                    android:icon="@drawable/ic_date_top"
                    android:title="@string/list_sort_date_top" />
                <item
                    android:id="@+id/sort_date_end"
                    android:icon="@drawable/ic_date_end"
                    android:title="@string/list_sort_date_end" />
                <item
                    android:id="@+id/sort_rating"
                    android:icon="@drawable/ic_list_sort_rating"
                    android:title="@string/list_sort_rating" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_list_filter"
        android:title="@string/list_filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/filter_menu">
                <item
                    android:id="@+id/filter_clear"
                    android:icon="@drawable/ic_cancel"
                    android:title="@string/action_clear" />
                <item
                    android:id="@+id/filter_label"
                    android:icon="@drawable/ic_label"
                    android:title="@string/recipe_group_label" />
                <item
                    android:id="@+id/filter_category"
                    android:icon="@drawable/ic_category"
                    android:title="@string/recipe_group_category" />
                <item
                    android:id="@+id/filter_energy"
                    android:icon="@drawable/ic_food_energy"
                    android:title="@string/list_group_energy" />
                <item
                    android:id="@+id/filter_nutrition"
                    android:icon="@drawable/ic_food_nutrition"
                    android:title="@string/list_group_nutrition" />
                <item
                    android:id="@+id/filter_time"
                    android:icon="@drawable/ic_time"
                    android:title="@string/list_group_time" />
                <item
                    android:id="@+id/filter_food"
                    android:icon="@drawable/ic_food"
                    android:title="@string/recipe_group_food" />
                <item
                    android:id="@+id/filter_name"
                    android:icon="@drawable/ic_list_sort_name"
                    android:title="@string/list_sort_name" />
                <item
                    android:id="@+id/filter_account"
                    android:icon="@drawable/ic_list_sort_account"
                    android:title="@string/list_sort_account" />
                <item
                    android:id="@+id/filter_date_top"
                    android:icon="@drawable/ic_date_top"
                    android:title="@string/list_sort_date_top" />
                <item
                    android:id="@+id/filter_date_end"
                    android:icon="@drawable/ic_date_end"
                    android:title="@string/list_sort_date_end" />
                <item
                    android:id="@+id/filter_rating"
                    android:icon="@drawable/ic_list_sort_rating"
                    android:title="@string/list_sort_rating" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/search_clear"
        android:icon="@drawable/ic_search_clear"
        android:title="@string/action_search_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_reset"
        android:title="@string/action_reset"
        app:showAsAction="never" />

</menu>