<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_base_nav_root_recipe"
        android:title="@string/drawer_base_nav_root_recipe">
        <item
            android:id="@+id/drawer_base_nav_recipe_all"
            android:icon="@drawable/ic_recipe"
            android:title="@string/drawer_base_nav_recipe_all" />
        <item
            android:id="@+id/drawer_base_nav_recipe_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/drawer_base_nav_recipe_favorite" />
    </item>

    <group
        android:id="@+id/drawer_group_cart"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/drawer_menu_cart" />
    </group>

    <group
        android:id="@+id/drawer_group_editor"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_label"
            android:icon="@drawable/ic_label"
            android:title="@string/drawer_menu_labels" />
        <item
            android:id="@+id/drawer_category"
            android:icon="@drawable/ic_category"
            android:title="@string/drawer_menu_categories" />
    </group>

    <group
        android:id="@+id/drawer_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_menu_settings" />
    </group>
</menu>