<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/drawer_date_top_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:contentDescription="@string/drawer_date_top_description"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/drawer_date_end_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date_top" />

    <TextView
        android:id="@+id/drawer_date_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="00.00.0000"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_date_top_icon"
        app:layout_constraintRight_toRightOf="@+id/drawer_date_top_icon"
        app:layout_constraintTop_toBottomOf="@+id/drawer_date_top_icon"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/drawer_date_top_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/drawer_date_top_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_date_top_text"
        app:layout_constraintRight_toRightOf="@+id/drawer_date_top_text"
        app:layout_constraintTop_toBottomOf="@+id/drawer_date_top_text" />

    <ImageView
        android:id="@+id/drawer_date_end_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:contentDescription="@string/drawer_date_end_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date_end" />

    <TextView
        android:id="@+id/drawer_date_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="00.00.0000"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_date_end_icon"
        app:layout_constraintRight_toRightOf="@+id/drawer_date_end_icon"
        app:layout_constraintTop_toBottomOf="@+id/drawer_date_end_icon"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/drawer_date_end_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/drawer_date_end_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_date_end_text"
        app:layout_constraintRight_toRightOf="@+id/drawer_date_end_text"
        app:layout_constraintTop_toBottomOf="@+id/drawer_date_end_text" />

    <ImageView
        android:id="@+id/drawer_recipe_num_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:contentDescription="@string/drawer_recipe_num_description"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toRightOf="@+id/drawer_date_end_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_recipe" />

    <TextView
        android:id="@+id/drawer_recipe_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_recipe_num_icon"
        app:layout_constraintRight_toRightOf="@+id/drawer_recipe_num_icon"
        app:layout_constraintTop_toBottomOf="@+id/drawer_recipe_num_icon"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/drawer_recipe_num_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/drawer_recipe_num_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/drawer_recipe_num_text"
        app:layout_constraintRight_toRightOf="@+id/drawer_recipe_num_text"
        app:layout_constraintTop_toBottomOf="@+id/drawer_recipe_num_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>